<resources>
    <string name="app_name">聊天</string>
    <string name="password">密码</string>
    <string name="username">用户名</string>
    <string name="login">登录</string>
    <string name="newuser">新用户</string>
    <string name="register">注册</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="message">消息</string>
    <string name="conatct">联系人</string>
    <string name="plugin">动态</string>
    <string name="exit">退出登录</string>

    <string name="weather">天气查询</string>
    <string name="phonenumberlocation">手机归属地查询</string>
    <string name="news">网易新闻</string>
    <string name="joke">笑话大全</string>
</resources>
